scrollbar issue fix

--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -81,7 +81,7 @@ $primary-font: 'Open Sans';
             }
             
            &::-webkit-scrollbar{
-               width: 6px;
+               width: 8px;
                background-color: #F5F5F5;
             }
             &::-webkit-scrollbar-thumb{
